log
Wed 10 May 2023 11:53:56 PM UTC: 
 tests:  0|4
total_score: 0/70
77d63f8
Thu 11 May 2023 12:08:23 AM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|3
total_score: 10/70
4d0ad3e
Thu 11 May 2023 12:10:32 AM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9a7d6b7
Thu 11 May 2023 12:11:23 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5dc9730
Thu 11 May 2023 12:11:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
098e8e8
Thu 11 May 2023 12:12:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
72d87c0
Thu 11 May 2023 12:12:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fcdec66
Thu 11 May 2023 12:14:05 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
adff2ab
Thu 11 May 2023 12:15:26 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
4d7abcd
Thu 11 May 2023 12:27:25 AM UTC: 
 heap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  7|1
total_score: 45/70
c1f2128
